CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

# Needed for UnitTest++
LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../CMake )

# Look for unittest++
FIND_PACKAGE (UnitTest++ REQUIRED)
INCLUDE_DIRECTORIES (${UNITTEST++_INCLUDE_DIR})

SET ( DIFFERENTIATION_SOURCES 
	KinematicsAD.cc
	DynamicsAD.cc
	)

IF (RBDL_BUILD_STATIC)
	ADD_LIBRARY ( rbdl_ad-static STATIC
		${DIFFERENTIATION_SOURCES}
		)
  SET_TARGET_PROPERTIES ( rbdl_ad-static PROPERTIES PREFIX "lib")
  SET_TARGET_PROPERTIES ( rbdl_ad-static PROPERTIES OUTPUT_NAME "rbdl_ad")

	INSTALL (TARGETS rbdl_ad-static
	  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
ELSE (RBDL_BUILD_STATIC)
	ADD_LIBRARY ( rbdl_ad SHARED ${DIFFERENTIATION_SOURCES} )
	SET_TARGET_PROPERTIES ( rbdl_ad PROPERTIES
		VERSION ${RBDL_VERSION}
		SOVERSION ${RBDL_SO_VERSION}
		)

	INSTALL (TARGETS rbdl_ad
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
		)
ENDIF (RBDL_BUILD_STATIC)

INCLUDE_DIRECTORIES ( 
	../../src/ 
	../../include/
	)

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
  LINKER_LANGUAGE CXX
)

IF (RBDL_BUILD_TESTS)
	SET ( TESTS_SOURCES
		runtests.cc
		DifferentiationTests.cc
		)

	ADD_EXECUTABLE ( ad_tests ${TESTS_SOURCES} )

	SET_TARGET_PROPERTIES ( ad_tests PROPERTIES
		LINKER_LANGUAGE CXX
		OUTPUT_NAME runtests
		)

	SET (RBDL_LIBRARY rbdl)
	IF (RBDL_BUILD_STATIC)
		SET (RBDL_LIBRARY rbdl-static)
	ENDIF (RBDL_BUILD_STATIC)

	TARGET_LINK_LIBRARIES ( ad_tests
			${UNITTEST++_LIBRARY}
			${RBDL_LIBRARY}
			rbdl_ad
		)
ENDIF (RBDL_BUILD_TESTS)
