PROJECT (RBDL_ADDON_DIFFERENTIATION)

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wno-long-long")

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )

INCLUDE_DIRECTORIES (
	${CMAKE_CURRENT_SOURCE_DIR}/include/rbdl
	${CMAKE_CURRENT_BINARY_DIR}/include/rbdl
)

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
		LINKER_LANGUAGE CXX
	)

# Perform the proper linking
SET (CMAKE_SKIP_BUILD_RPATH FALSE)
SET (CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET (CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# define add-on sources
SET ( DIFFERENTIATION_SOURCES
	ModelAD.cc
	ModelED.cc
	FdModelEntry.cc
	ModelEntryFDC.cc
	ConstraintsAD.cc
	ConstraintsFD.cc
	ConstraintsFDC.cc
	KinematicsAD.cc
	KinematicsFD.cc
	DynamicsAD.cc
	DynamicsFD.cc
	DynamicsFDC.cc
	DynamicsED.cc
	JointAD.cc
	JointED.cc
	rbdl_utilsAD.cc
	rbdl_utilsFD.cc
)

MESSAGE(STATUS "In RBDL:DIFFERENTIATION")
MESSAGE(STATUS "RBDL_SOURCES: ${RBDL_SOURCES}")

IF ( RBDL_BUILD_STATIC )
	ADD_LIBRARY ( rbdl_ad-static STATIC
		${RBDL_SOURCES}
		${DIFFERENTIATION_SOURCES}
		)
	# target_compile_features(rbdl_ad-static PRIVATE cxx_range_for)
	SET_TARGET_PROPERTIES ( rbdl_ad-static PROPERTIES PREFIX "lib")
	SET_TARGET_PROPERTIES ( rbdl_ad-static PROPERTIES OUTPUT_NAME "rbdl_ad")

	INSTALL (TARGETS rbdl_ad-static
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
ELSE (RBDL_BUILD_STATIC)
	ADD_LIBRARY (
		rbdl_ad SHARED
		${RBDL_SOURCES}
		${DIFFERENTIATION_SOURCES}
	)
	# target_compile_features(rbdl_ad PRIVATE cxx_range_for)
	SET_TARGET_PROPERTIES ( rbdl_ad PROPERTIES
		VERSION ${RBDL_VERSION}
		SOVERSION ${RBDL_SO_VERSION}
	)

	INSTALL (TARGETS rbdl_ad
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
ENDIF (RBDL_BUILD_STATIC)

INCLUDE_DIRECTORIES (
	./
	./../../src/
	./../../include/
)

FILE ( GLOB headers
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
	)

INSTALL ( FILES ${headers}
	DESTINATION
	${CMAKE_INSTALL_INCLUDEDIR}/rbdl/addons/differentiation
	)

IF (RBDL_BUILD_TESTS)
	ADD_SUBDIRECTORY ( tests )
ENDIF (RBDL_BUILD_TESTS)
